# OPC

./: .env.example  .gitignore  README.md  config.py  main.py  observability.py  pyproject.toml  pytest.ini
agents/: __init__.py  base.py  capabilities.py  coder.py  debugger.py  factory.py  planner.py  pm.py  profiles.py  reviewer.py  roles.py
api/: __init__.py  dependencies.py  routes.py  schemas.py
director/: __init__.py  agent.py  router.py  session.py  wechat_message_service.py
docs/: architecture-design.md
graph/: builder.py  edges.py  nodes.py  runtime.py
llm/: __init__.py  client.py
mcp/: config.py  discovery.py  fallback.py  health.py  mapping.py
notifications/: __init__.py  publisher.py
scripts/: launch_stack.py  load_env.sh  preflight_stack.py  smoke_stack.py
tests/: conftest.py  test_agent_capabilities.py  test_agent_llm_usage.py  test_app_bootstrap.py  test_coding_testing_debugging.py  test_debug_ui.py  test_director_agent_llm.py  test_director_router.py  test_director_session_flow.py  test_feedback_flow.py  test_graph_discovery_planning.py  test_langsmith_tracing.py  test_launch_stack_script.py  test_notification_publisher.py  test_review_and_final_gate.py  test_stack_preflight_script.py  test_stack_smoke_script.py  test_state_driven_react_flow.py  test_wechat_message_service.py  test_wecom_bot_bridge.py  test_wecom_bot_bridge_entrypoint.py  test_wecom_callbacks.py  test_wecom_notifier.py  test_workflow_notifications.py
tools/: defaults.py  registry.py  runtime.py  sandbox.py  specs.py
wecom_bot_bridge/: __init__.py  __main__.py  app.py  (+6 more)
(+105 files in other folders)
